--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -27,48 +27,66 @@
   tags:
     - debug
 
-- name: Write request body json tmp file ({{ data_center.name }}).
-  ansible.builtin.copy:
-    content: |
-      {
-        "mkey": "{{ data_center.name }}",
-        "location": "{{ data_center.location }}"
-      }
-    dest: "/tmp/fad_glb_dc_{{ data_center.name }}_request_body.json"
-    mode: u+rw,g-rw,o-rw
-  register: request_body
-  delegate_to: localhost
-  run_once: true
+- name: Compare the current existing state with our desired state ({{ data_center.name }}).
+  ansible.builtin.set_fact:
+    idempotent_check_1: "{{ data_center.name }} == {{ fad_glb_dc_existing_data.json.payload.mkey }}"
+    idempotent_check_2: "{{ data_center.id }} == {{ fad_glb_existing_data.json.payload.location }}"
+  tags:
+    - idempotent_check
 
-- name: Trying to create new data center entry ({{ data_center.name }}).
-  ansible.builtin.uri:
-    method: POST
-    url: "{{ fad_api_endpoint_glb_dc }}"
-    body_format: "{{ fad_api_uri_params.body_format }}"
-    validate_certs: "{{ fad_api_uri_params.validate_certs }}"
-    return_content: "{{ fad_api_uri_params.return_content }}"
-    status_code: "{{ fad_api_uri_params.status_code }}"
-    headers: "{{ fad_api_header }}"
-    body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
-  register: fad_glb_dc_post_result
-  delegate_to: localhost
-  changed_when: "fad_glb_dc_post_result.json.payload == 0"
-  failed_when: "fad_glb_dc_post_result.json.payload != -15 and fad_glb_dc_post_result.json.payload != 0"
+- name: Debug out the value of idempotent_check.
+  ansible.builtin.debug:
+    msg: |
+      Idempotent Check #1: {{ idempotent_check_1}}
+      Idempotent Check #2: {{ idempotent_check_2}}
 
-- name: Update the data center entry if entry exist ({{ data_center.name }}).
-  ansible.builtin.uri:
-    method: PUT
-    url: "{{ fad_api_endpoint_glb_dc }}"
-    body_format: "{{ fad_api_uri_params.body_format }}"
-    validate_certs: "{{ fad_api_uri_params.validate_certs }}"
-    return_content: "{{ fad_api_uri_params.return_content }}"
-    status_code: "{{ fad_api_uri_params.status_code }}"
-    headers: "{{ fad_api_header }}"
-    body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
-  register: fad_glb_dc_put_result
-  delegate_to: localhost
-  when: "fad_glb_dc_post_result.json == -15"
-  failed_when: "fad_glb_dc_put_result.json.payload != -15 and fad_glb_dc_put_result.json.payload != 0"
+- name: Create/update entry if idempotent check failed {{ data_center.name }}.
+  block:
+
+    - name: Write request body json tmp file ({{ data_center.name }}).
+      ansible.builtin.copy:
+        content: |
+          {
+            "mkey": "{{ data_center.name }}",
+            "location": "{{ data_center.location }}"
+          }
+        dest: "/tmp/fad_glb_dc_{{ data_center.name }}_request_body.json"
+        mode: u+rw,g-rw,o-rw
+      register: request_body
+      delegate_to: localhost
+      run_once: true
+
+    - name: Trying to create new data center entry ({{ data_center.name }}).
+      ansible.builtin.uri:
+        method: POST
+        url: "{{ fad_api_endpoint_glb_dc }}"
+        body_format: "{{ fad_api_uri_params.body_format }}"
+        validate_certs: "{{ fad_api_uri_params.validate_certs }}"
+        return_content: "{{ fad_api_uri_params.return_content }}"
+        status_code: "{{ fad_api_uri_params.status_code }}"
+        headers: "{{ fad_api_header }}"
+        body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+      register: fad_glb_dc_post_result
+      delegate_to: localhost
+      changed_when: "fad_glb_dc_post_result.json.payload == 0"
+      failed_when: "fad_glb_dc_post_result.json.payload != -15 and fad_glb_dc_post_result.json.payload != 0"
+
+    - name: Update the data center entry if entry exist ({{ data_center.name }}).
+      ansible.builtin.uri:
+        method: PUT
+        url: "{{ fad_api_endpoint_glb_dc }}"
+        body_format: "{{ fad_api_uri_params.body_format }}"
+        validate_certs: "{{ fad_api_uri_params.validate_certs }}"
+        return_content: "{{ fad_api_uri_params.return_content }}"
+        status_code: "{{ fad_api_uri_params.status_code }}"
+        headers: "{{ fad_api_header }}"
+        body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+      register: fad_glb_dc_put_result
+      delegate_to: localhost
+      when: "fad_glb_dc_post_result.json == -15"
+      failed_when: "fad_glb_dc_put_result.json.payload != -15 and fad_glb_dc_put_result.json.payload != 0"
+
+  when: "idempotent_check_1 == true and idempotent_check_2 == true"
 
 - name: Check if the data center value has changed ({{ data_center.name }}).
   ansible.builtin.uri:
