--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -73,9 +73,7 @@
       when: "fad_glb_dc_post_result.json == -15"
       failed_when: "fad_glb_dc_put_result.json.payload != -15 and fad_glb_dc_put_result.json.payload != 0"
 
-  when: >
-    "data_center.name != fad_glb_dc_existing_data.json.payload.mkey or 
-    data_center.location != fad_glb_dc_existing_data.json.payload.location"
+  when: "data_center.name != fad_glb_dc_existing_data.json.payload.mkey or data_center.location != fad_glb_dc_existing_data.json.payload.location"
 
 - name: Check if the data center value has changed ({{ data_center.name }}).
   ansible.builtin.uri:
