--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -99,8 +99,6 @@
       tags:
         - debug
 
-  when: >-
-    "data_center.name != fad_glb_dc_existing_data.json.payload.mkey
-    or data_center.location != fad_glb_dc_existing_data.json.payload.location"
+  when: "data_center.name != fad_glb_dc_existing_data.json.payload.mkey or data_center.location != fad_glb_dc_existing_data.json.payload.location"
   tags:
     - fad_glb_dc
