--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -1,9 +1,12 @@
 ---
+dependencies: []
+
 galaxy_info:
   author: ndkprd
   role_name: fortiadc-glb-data-center
   namespace: ndkprd
   description: An Ansible role to create/update Fortinet's FortiADC Global Load Balance Data Center configuration.
+  standalone: true
   license: MIT
   min_ansible_version: '2.12'
   platforms:
@@ -13,5 +16,3 @@ galaxy_info:
   galaxy_tags:
     - fortiadc
     - fortinet
-
-dependencies: []
