--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -1,17 +1,17 @@
-- name: Set GLB DC REST API endpoint ({{ data_center.name }}).
+- name: Set GLB DC REST API endpoint for {{ data_center.name }}
   ansible.builtin.set_fact:
     fad_api_endpoint_glb_dc: https://{{ ansible_host }}/api/global_load_balance_data_center?vdom={{ fad_vdom }}&mkey={{ data_center.name }}
   tags:
     - fad_glb_dc
 
-- name: Print out the GLB DC REST API endpoint ({{ data_center.name }}).
+- name: Print out the GLB DC REST API endpoint for {{ data_center.name }}
   ansible.builtin.debug:
     msg: "This FAD GLB DC REST API endpoint: {{ fad_api_endpoint_glb_dc }}"
   tags:
     - fad_glb_dc
     - debug
 
-- name: Get the existing value ofnano data center entry ({{ data_center.name }}).
+- name: Get the existing value ofnano data center entry for {{ data_center.name }}
   ansible.builtin.uri:
     method: GET
     url: "{{ fad_api_endpoint_glb_dc }}"
@@ -25,7 +25,7 @@
   tags:
     - fad_glb_dc
 
-- name: Print the existing value of data center entry ({{ data_center.name }}).
+- name: Print the existing value of data center entry for {{ data_center.name }}
   ansible.builtin.debug:
     var: fad_glb_dc_existing_data.json.payload
   delegate_to: localhost
@@ -33,22 +33,39 @@
     - fad_glb_dc
     - debug
 
-- name: Write request body json tmp file ({{ data_center.name }}.
-  ansible.builtin.copy:
-    content: |
+# - name: Write request body json tmp file ({{ data_center.name }}.
+#   ansible.builtin.copy:
+#     content: |
+#       {
+#         "mkey": "{{ data_center.name }}",
+#         "location": "{{ data_center.location }}"
+#       }
+#     dest: "/tmp/fad_glb_dc_{{ data_center.name }}_request_body.json"
+#     mode: u+rw,g-rw,o-rw
+#   register: request_body
+#   delegate_to: localhost
+#   run_once: true
+#   tags:
+#     - fad_glb_dc
+
+- name: Write DNS Policy request body template for {{ data_center.name }}
+  ansible.builtin.set_fact:
+    request_body: |
       {
         "mkey": "{{ data_center.name }}",
         "location": "{{ data_center.location }}"
       }
-    dest: "/tmp/fad_glb_dc_{{ data_center.name }}_request_body.json"
-    mode: u+rw,g-rw,o-rw
-  register: request_body
-  delegate_to: localhost
-  run_once: true
   tags:
     - fad_glb_dc
 
-- name: Create new data center entry if entry not found ({{ data_center.name }}.
+- name: Print out the request_body result for {{ data_center.name }}
+  ansible.builtin.debug:
+    var: request_body
+  tags:
+    - fad_glb_dc
+    - debug
+
+- name: Create new data center entry if entry not found for {{ data_center.name }}
   ansible.builtin.uri:
     method: POST
     url: "{{ fad_api_endpoint_glb_dc }}"
@@ -57,7 +74,8 @@
     return_content: "{{ fad_api_uri_params.return_content }}"
     status_code: "{{ fad_api_uri_params.status_code }}"
     headers: "{{ fad_api_header }}"
-    body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+    # body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+    body: "{{ request_body }}"
   register: fad_glb_dc_post_result
   delegate_to: localhost
   when: fad_glb_dc_existing_data.json.payload.mkey is undefined
@@ -75,7 +93,8 @@
     return_content: "{{ fad_api_uri_params.return_content }}"
     status_code: "{{ fad_api_uri_params.status_code }}"
     headers: "{{ fad_api_header }}"
-    body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+    #body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
+    body: "{{ request_body }}"
   register: fad_glb_dc_put_result
   delegate_to: localhost
   when: >
