--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -11,20 +11,27 @@
     - fad_glb_dc
     - debug
 
-- name: Get the existing value ofnano data center entry for {{ data_center.name }}
-  ansible.builtin.uri:
-    method: GET
-    url: "{{ fad_api_endpoint_glb_dc }}"
-    body_format: "{{ fad_api_uri_params.body_format }}"
-    validate_certs: "{{ fad_api_uri_params.validate_certs }}"
-    return_content: "{{ fad_api_uri_params.return_content }}"
-    status_code: "{{ fad_api_uri_params.status_code }}"
-    headers: "{{ fad_api_header }}"
-  register: fad_glb_dc_existing_data
-  delegate_to: localhost
+# - name: Get the existing value of the data center entry for {{ data_center.name }}
+#   ansible.builtin.uri:
+#     method: GET
+#     url: "{{ fad_api_endpoint_glb_dc }}"
+#     body_format: "{{ fad_api_uri_params.body_format }}"
+#     validate_certs: "{{ fad_api_uri_params.validate_certs }}"
+#     return_content: "{{ fad_api_uri_params.return_content }}"
+#     status_code: "{{ fad_api_uri_params.status_code }}"
+#     headers: "{{ fad_api_header }}"
+#   register: fad_glb_dc_existing_data
+#   delegate_to: localhost
+#   tags:
+#     - fad_glb_dc
+
+- name: Get the existing value of the data center entry for {{ data_center.name }}
+  ansible.builtin.include_tasks: fad_rest_api.yaml
+  vars:
+    http_method: GET
   tags:
     - fad_glb_dc
-
+  
 - name: Print the existing value of data center entry for {{ data_center.name }}
   ansible.builtin.debug:
     var: fad_glb_dc_existing_data.json.payload
@@ -32,21 +39,6 @@
   tags:
     - fad_glb_dc
     - debug
-
-# - name: Write request body json tmp file ({{ data_center.name }}.
-#   ansible.builtin.copy:
-#     content: |
-#       {
-#         "mkey": "{{ data_center.name }}",
-#         "location": "{{ data_center.location }}"
-#       }
-#     dest: "/tmp/fad_glb_dc_{{ data_center.name }}_request_body.json"
-#     mode: u+rw,g-rw,o-rw
-#   register: request_body
-#   delegate_to: localhost
-#   run_once: true
-#   tags:
-#     - fad_glb_dc
 
 - name: Write DNS Policy request body template for {{ data_center.name }}
   ansible.builtin.set_fact:
@@ -74,7 +66,6 @@
     return_content: "{{ fad_api_uri_params.return_content }}"
     status_code: "{{ fad_api_uri_params.status_code }}"
     headers: "{{ fad_api_header }}"
-    # body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
     body: "{{ request_body }}"
   register: fad_glb_dc_post_result
   delegate_to: localhost
@@ -93,7 +84,6 @@
     return_content: "{{ fad_api_uri_params.return_content }}"
     status_code: "{{ fad_api_uri_params.status_code }}"
     headers: "{{ fad_api_header }}"
-    #body: "{{ lookup('ansible.builtin.file', request_body.dest) }}"
     body: "{{ request_body }}"
   register: fad_glb_dc_put_result
   delegate_to: localhost
