Move the REST API task to its own file for better reusability.

--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -29,6 +29,7 @@
   ansible.builtin.include_tasks: fad_rest_api.yaml
   vars:
     http_method: 'GET'
+  register: fad_glb_dc_existing_data
   tags:
     - fad_glb_dc
   
