--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -32,6 +32,9 @@
   register: fad_glb_dc_existing_data
   tags:
     - fad_glb_dc
+
+- debug:
+    vars: fad_glb_existing_data
   
 - name: Print the existing value of data center entry for {{ data_center.name }}
   ansible.builtin.debug:
