Move the REST API task to its own file for better reusability.

--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -34,7 +34,7 @@
     - fad_glb_dc
 
 - debug:
-    vars: fad_glb_existing_data
+    var: fad_glb_existing_data
   
 - name: Print the existing value of data center entry for {{ data_center.name }}
   ansible.builtin.debug:
