--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,8 +18,11 @@ jobs:
         uses: google-github-actions/release-please-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: patch
   push-to-galaxy:
     runs-on: ubuntu-latest
+    needs: github-release
+    if: ${{ needs.github-release.result == 'success' }}
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v4
