--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,11 +14,12 @@ jobs:
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v4
-      - name: Release with release-please
-        uses: google-github-actions/release-please-action@v2
+      - name: Create a release.
+        uses: elgohr/Github-Release-Action@v5
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: patch
+          title: Test release using Actions.
   push-to-galaxy:
     runs-on: ubuntu-latest
     needs: github-release
