--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,11 +15,12 @@ jobs:
       - name: Checkout repo.
         uses: actions/checkout@v4
       - name: Create a release.
-        uses: elgohr/Github-Release-Action@v5
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          title: v1.1.3
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: false
+          title: v1.1.4
   push-to-galaxy:
     runs-on: ubuntu-latest
     needs: github-release
