--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v4
+      - name: Set up Python 3.
+        uses: actions/setup-python@v5
+      - name: Install bumpversion.
+        run: pip3 install bumpversion
       - name: Read current version.
         id: read-version
         run: echo "::set-output name=version::$(cat VERSION)"
