--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,38 +12,39 @@ jobs:
   bump-version:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo.
         uses: actions/checkout@v2
-      - name: Read current version
+      - name: Read and and update current version file.
+        # yeah, I know this dumb, don't mind me
         run: |
           version=$(cat VERSION)
           major_minor="${version%.*}"
-          last_number="${version##*.}"
-          new_last_number=$((last_number + 1))
-          new_version="${major_minor}.${new_last_number}"
+          patch_number="${version##*.}"
+          new_patch_number=$((last_number + 1))
+          new_version="${major_minor}.${new_patch_number}"
           echo "$new_version" > VERSION
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "andikapradp@gmail.com"
+          git config --global user.name "ndkprd"
           git add VERSION
           git commit -m "Bump version to $new_version"
           git push origin main
-      - name: Set new version
-        run: echo "NEW_VERSION=$(cat VERSION)" >> $GITHUB_ENV
+      - name: Pass the current file into a var.
+        id: set_var
+        run: echo "NEW_VERSION=$(cat VERSION)" >> $GITHUB_OUTPUT
 
   github-release:
     runs-on: ubuntu-latest
     needs: bump-version
     steps:
-      - name: Checkout repository
+      - name: Checkout repo.
         uses: actions/checkout@v2
-
-      - name: Create a release
+      - name: Create a release.
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          automatic_release_tag: "v${{ env.NEW_VERSION }}"
+          automatic_release_tag: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
           prerelease: false
-          title: "v${{ env.NEW_VERSION }}"
+          title: "v{{ needs.bump-version.outputs.NEW_VERSION }}"
 
   push-to-galaxy:
     runs-on: ubuntu-latest
