--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,7 +47,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           automatic_release_tag: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
           prerelease: false
-          title: "v{{ needs.bump-version.outputs.NEW_VERSION }}"
+          title: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
 
   push-to-galaxy:
     runs-on: ubuntu-latest
