--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,24 +16,12 @@ jobs:
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v2
-      - name: Read and and update current version file.
-        # yeah, I know this dumb, don't mind me
-        run: |
-          version=$(cat VERSION)
-          major_minor="${version%.*}"
-          patch_number="${version##*.}"
-          new_patch_number=$((patch_number + 1))
-          new_version="${major_minor}.${new_patch_number}"
-          echo "$new_version" > VERSION
-          echo "Updated from $version to $new_version"
-          git config --global user.email "andikapradp@gmail.com"
-          git config --global user.name "ndkprd"
-          git add VERSION
-          git commit -m "Bump version to $new_version"
-          git push origin main
-      - name: Pass the current file into a var.
-        id: set_var
-        run: echo "NEW_VERSION=$(cat VERSION)" >> $GITHUB_OUTPUT
+      - name: Get latest tag
+        id: get_latest_tag
+        run: echo "::set-output name=TAG_NAME::$(git describe --tags --abbrev=0)"
+      - name: Extract version from tag
+        id: extract_version
+        run: echo "::set-output name=NEW_VERSION::$(echo ${{ steps.get_latest_tag.outputs.TAG_NAME }} | cut -d 'v' -f 2)"
 
   github-release:
     runs-on: ubuntu-latest
