modified:   meta/main.yaml 	modified:   tasks/add_glb_data_center.yaml

--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -35,7 +35,7 @@
     - fad_glb_dc
     - debug
 
-- name: Write DNS Policy request body template for {{ data_center.name }}
+- name: Write GLB Data Center request body template for {{ data_center.name }}
   ansible.builtin.set_fact:
     request_body: |
       {
