Added debug tag to change check.

--- a/tasks/add_glb_data_center.yaml
+++ b/tasks/add_glb_data_center.yaml
@@ -103,6 +103,7 @@
   delegate_to: localhost
   tags:
     - fad_glb_dc
+    - debug
 
 - name: Print the new value of data center entry for {{ data_center.name }}
   ansible.builtin.debug:
