Update hosts example.

--- a/examples/hosts.example
+++ b/examples/hosts.example
@@ -1,11 +1,6 @@
 [fortiadc]
-fad-01
+fad-01 ansible_host=fad-01.infra.ndkprd.com fad_apitoken=mysupersecrettoken fad_vdom=root
 
 [fortiadc:vars]
 http_port=80
 https_port=443
-
-[fad-01:vars]
-ansible_host=fad-01.infra.ndkprd.com
-fad_apitoken=mysupersecrettoken
-fad_vdom=root
