--- a/examples/hosts.example
+++ b/examples/hosts.example
@@ -1,5 +1,5 @@
 [fortiadc]
-fad-01 ansible_host=fad-01.infra.ndkprd.com fad_apitoken=mysupersecrettoken fad_vdom=root
+fad-01 ansible_host=fad-01.infra.ndkprd.com ansible_connection=local fad_apitoken=mysupersecrettoken fad_vdom=root
 
 [fortiadc:vars]
 http_port=80
