docs: update readme.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,11 +41,18 @@ jobs:
     steps:
       - name: Checkout repo.
         uses: actions/checkout@v2
-      - name: Create a release.
+      - name: Create a versioned release.
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           automatic_release_tag: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
+          prerelease: false
+          title: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
+      - name: Create a latest release.
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: "latest"
           prerelease: false
           title: "v${{ needs.bump-version.outputs.NEW_VERSION }}"
 
