refactor: refactor tags.

--- a/examples/fortiadc-glb-data-centers.yaml
+++ b/examples/fortiadc-glb-data-centers.yaml
@@ -3,10 +3,10 @@
 - name: Update/create FortiADC GLB Data Centers resources.
   hosts: all
   become: false
-  gather_facts: no
+  gather_facts: false
   # connection: local
   vars:
-     # for testing-purpose only, to delete the created resources after. change to 'false' if you want the resource to stay.     
+     # for testing-purpose only, to delete the created resources after. change to 'false' if you want the resource to stay.
     do_cleanup: true
     # global-load-balance data-center entries
     fad_glb_data_centers:
@@ -32,7 +32,9 @@
         headers: "{{ fad_api_header }}"
       register: fad_glb_dc_existing_data
       # delegate_to: localhost
-      when: do_cleanup == true | bool | default('false')
+      when: do_cleanup == 'true' | bool | default('false')
       loop: "{{ fad_glb_data_centers }}"
       async: 30
       poll: 0
+      tags:
+        - cleanup
