--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,7 +1,11 @@
 ---
 
 - name: Include task to create/update GLB Data Centers
-  ansible.builtin.include_tasks: 01-fad-glb-data-center.yaml
-  loop: "{{ fad_glb_data_centers }}"
-  loop_control:
-    loop_var: data_center
+  tags:
+    - fad_glb_data_centers
+  block:
+    - name: Include task to create/update GLB Data Centers
+      ansible.builtin.include_tasks: 01-fad-glb-data-center.yaml
+      loop: "{{ fad_glb_data_centers }}"
+      loop_control:
+        loop_var: data_center
